# TruvisRenderer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  justfile  map.toml  resources.toml
app/app-kit/: Cargo.toml  README.md
app/app-kit/src/: camera.rs  camera_controller.rs  gui_plugin.rs  input_state.rs  lib.rs  overlay.rs
app/app-kit/src/gui_backend/: gui_mesh.rs  gui_pass.rs  mod.rs
app/app-kit/src/render_pipeline/: common_settings.rs  mod.rs  offline_render_graph.rs  rt_render_graph.rs  targets.rs
app/samples/cornell/: Cargo.toml
app/samples/cornell/src/: cornell_app.rs  lib.rs  main.rs
app/samples/shader-toy/: Cargo.toml
app/samples/shader-toy/src/: main.rs  shader_toy_app.rs  shader_toy_pass.rs
app/truvis/: Cargo.toml
app/truvis/src/: lib.rs  main.rs  overlay_ui.rs  truvis_app.rs
engine/app-frame/truvis-winit-app/: Cargo.toml  README.md
engine/app-frame/truvis-winit-app/src/: app.rs  lib.rs  winit_event_adapter.rs
engine/crates/truvis-app/: Cargo.toml  README.md
engine/crates/truvis-app-api/: Cargo.toml
engine/crates/truvis-app-api/src/: app_plugin.rs  lib.rs  overlay.rs
engine/crates/truvis-app/src/: app_plugin.rs  camera_controller.rs  frame_runtime.rs  gui_front.rs  gui_plugin.rs  gui_rg_pass.rs  input_state.rs  lib.rs  overlay.rs  render_app.rs
engine/crates/truvis-app/src/outer_app/: base.rs  cornell_app.rs  gltf_app.rs  mod.rs  sponza_app.rs
engine/crates/truvis-app/src/platform/: camera_controller.rs  input_event.rs  input_manager.rs  (+1 more)
engine/crates/truvis-frame-api/: Cargo.toml  README.md
engine/crates/truvis-frame-api/src/: frame_app.rs  frame_plugin.rs  input_event.rs  lib.rs  plugin.rs  render_app.rs
engine/crates/truvis-frame-runtime/: Cargo.toml  README.md
engine/crates/truvis-frame-runtime/src/: base_app.rs  camera_controller.rs  frame_app_shell.rs  frame_runtime.rs  gui_front.rs  input_manager.rs  input_state.rs  lib.rs  render_app_shell.rs
engine/crates/truvis-gui-backend/: Cargo.toml  README.md
engine/crates/truvis-gui-backend/src/: gui_backend.rs  gui_mesh.rs  gui_pass.rs  gui_vertex_layout.rs  lib.rs
engine/crates/truvis-logs/: Cargo.toml  README.md
engine/crates/truvis-logs/src/: lib.rs
engine/crates/truvis-render-graph/: Cargo.toml  README.md
engine/crates/truvis-render-graph/src/: compute_pass.rs  render_context.rs
engine/crates/truvis-render-interface/: Cargo.toml  README.md
engine/crates/truvis-render-interface/src/: bindless_manager.rs  cmd_allocator.rs  fif_buffer.rs  frame_counter.rs  geometry.rs  gfx_resource_manager.rs  global_descriptor_sets.rs  gpu_scene.rs  lib.rs  pipeline_settings.rs  raycast.rs  render_data.rs  render_scene_view.rs  render_world.rs  sampler_manager.rs  stage_buffer_manager.rs
engine/crates/truvis-render-passes/: Cargo.toml  README.md
engine/crates/truvis-render-passes/src/: accum_pass.rs  blit_pass.rs  denoise_accum_pass.rs  lib.rs  phong_pass.rs  realtime_rt_pass.rs  resolve_pass.rs  sdr_pass.rs
engine/crates/truvis-renderer/: Cargo.toml  README.md
engine/crates/truvis-renderer/src/: lib.rs  render_context.rs  renderer.rs
engine/crates/truvis-scene/: AGENTS.md  Cargo.toml  README.md
engine/crates/truvis-scene/src/: guid_new_type.rs  lib.rs  material_manager.rs  mesh_manager.rs  procedural_mesh.rs  scene_manager.rs
engine/cxx/: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.md  vcpkg.json
engine/cxx/mods/truvixx-assimp/: CMakeLists.txt
engine/cxx/mods/truvixx-interface/: CMakeLists.txt  main.cpp
engine/cxx/mods/truvixx-streamline/: CMakeLists.txt
engine/cxx/mods/truvixx-utils/: CMakeLists.txt
engine/cxx/truvis-assimp-binding/: .gitignore  Cargo.toml  build.md  build.rs
engine/cxx/truvis-assimp-binding/src/: lib.rs
engine/cxx/truvis-cxx-binding/: Cargo.toml  build.md  build.rs
engine/cxx/truvis-cxx-binding/src/: lib.rs
engine/cxx/truvis-cxx-build/: Cargo.toml
engine/cxx/truvis-streamline-binding/: Cargo.toml  README.md  build.rs
engine/cxx/truvis-streamline-binding/src/: config.rs  dlss.rs  lib.rs  log_bridge.rs  runtime.rs
engine/cxx/truvixx-gfx/: CMakeLists.txt
engine/cxx/truvixx-gfx/src/: gfx_command_queue.cpp  gfx_device.cpp  gfx_instance.cpp  gfx_physical_device.cpp  gfx_swapchain.cpp  lib.cpp
engine/cxx/truvixx-interface/: main.cpp
engine/frame/truvis-app-frame/: Cargo.toml  README.md
engine/frame/truvis-app-frame/src/: plugin_api.rs  render_app_api.rs  render_app_shell.rs  render_loop.rs
engine/frame/truvis-frame-api/: Cargo.toml  README.md
engine/frame/truvis-frame-api/src/: input_event.rs  lib.rs  plugin.rs  render_app.rs
engine/frame/truvis-frame-runtime/: Cargo.toml  README.md
engine/frame/truvis-frame-runtime/src/: lib.rs  render_app_shell.rs
engine/gfx/truvis-descriptor-layout-macro/: Cargo.toml
engine/gfx/truvis-gfx/: Cargo.toml  README.md
engine/gfx/truvis-gfx/src/: gfx.rs  gfx_core.rs  lib.rs  sampler.rs
engine/render/truvis-render-graph/: Cargo.toml  README.md
engine/render/truvis-render-graph/src/: compute_pass.rs  lib.rs
engine/render/truvis-render-runtime/: Cargo.toml  README.md
engine/render/truvis-render-runtime/src/: asset_mesh_manager.rs  asset_mesh_uploader.rs  asset_texture_manager.rs  asset_texture_uploader.rs  bindless_manager.rs  dlss_sr.rs  environment_binding.rs  frame_timer.rs  frame_timing.rs  global_descriptor_sets.rs  instance_bridge.rs  lib.rs  material_bridge.rs  material_manager.rs  per_frame_gpu_data.rs  ray_cast.rs  render_options.rs  render_runtime.rs  render_runtime_ctx.rs  runtime_defaults.rs  sampler_manager.rs  scene_bridge.rs  shader_binding_system.rs  sky_bridge.rs  stage_buffer_manager.rs  texture_resolver.rs
tools/truvis-fetch-res/: Cargo.toml
tools/truvis-fetch-res/src/fetch_resources/: mod.rs  resource_fetcher.rs
truvis-app/app-kit/: Cargo.toml  README.md
truvis-app/app-kit/src/: lib.rs  overlay.rs
truvis-app/sponza/: Cargo.toml
truvis-app/sponza/src/: lib.rs  main.rs  sponza_app.rs
truvis-winit-app/: Cargo.toml  README.md
truvis-winit-app/src/: app.rs  lib.rs  render_loop.rs  shared.rs  winit_event_adapter.rs
(+767 files in other folders)
