[workspace]
resolver = "3"
members = [
    # utils
    "engine/utils/truvis-fetch-res",
    "engine/utils/truvis-path",
    # foundation
    "engine/foundation/truvis-utils",
    "engine/foundation/truvis-logs",
    # gfx
    "engine/gfx/truvis-gfx",
    "engine/gfx/truvis-descriptor-layout-macro",
    "engine/gfx/truvis-descriptor-layout-trait",
    # render
    "engine/render/truvis-render-foundation",
    "engine/render/truvis-render-graph",
    "engine/render/truvis-render-runtime",
    # world
    "engine/world/truvis-asset",
    "engine/world/truvis-world",
    # frame
    "engine/app-frame/truvis-app-frame",
    "engine/app-frame/truvis-winit-app",
    # shader 绑定相关
    "engine/shader/truvis-shader-binding",
    "engine/shader/truvis-shader-build",
    # cxx 绑定相关
    "engine/cxx/truvis-assimp-binding",
    "engine/cxx/truvis-streamline-binding",
    "engine/cxx/truvis-cxx-build",
    # app
    "app/app-kit",
    "app/app-render-passes",
    "app/truvis",
    "app/samples/hello-triangle",
    "app/samples/shader-toy",
    "app/samples/cornell",
]

[profile.dev]
opt-level = 0      # 优化级别: 0-3。0 表示不优化，编译最快
debug = true       # 包含调试符号
incremental = true # 开启增量编译，提升二次编译速度

[profile.release]
opt-level = 3      # 最高级优化，运行速度最快
debug = false      # 移除调试符号，减小二进制体积
lto = true         # 开启链接时优化 (Link Time Optimization)
panic = 'abort'    # panic 时直接终止，进一步减小体积


[workspace.dependencies]
# utils
truvis-fetch-res = { path = "engine/utils/truvis-fetch-res" }
truvis-path = { path = "engine/utils/truvis-path" }
# foundation
truvis-logs = { path = "engine/foundation/truvis-logs" }
truvis-utils = { path = "engine/foundation/truvis-utils" }
# gfx
truvis-gfx = { path = "engine/gfx/truvis-gfx" }
truvis-descriptor-layout-macro = { path = "engine/gfx/truvis-descriptor-layout-macro" }
truvis-descriptor-layout-trait = { path = "engine/gfx/truvis-descriptor-layout-trait" }
# render
truvis-render-foundation = { path = "engine/render/truvis-render-foundation" }
truvis-render-graph = { path = "engine/render/truvis-render-graph" }
truvis-render-runtime = { path = "engine/render/truvis-render-runtime" }
# world
truvis-asset = { path = "engine/world/truvis-asset" }
truvis-world = { path = "engine/world/truvis-world" }
# frame
truvis-app-frame = { path = "engine/app-frame/truvis-app-frame" }
truvis-winit-app = { path = "engine/app-frame/truvis-winit-app" }
# app
app-kit = { path = "app/app-kit" }
app-render-passes = { path = "app/app-render-passes" }
# shader
truvis-shader-binding = { path = "engine/shader/truvis-shader-binding" }
truvis-shader-build = { path = "engine/shader/truvis-shader-build" }
# cxx
truvis-assimp-binding = { path = "engine/cxx/truvis-assimp-binding" }
truvis-streamline-binding = { path = "engine/cxx/truvis-streamline-binding" }
truvis-cxx-build = { path = "engine/cxx/truvis-cxx-build" }



###########################################################
# 图形、窗口与 GUI (Graphics, Windowing & GUI)
###########################################################
# 默认 features：
# - debug 表示 vulkan 结构体实现了 Debut Trait
# - loader 表示在运行时动态搜索 vulkan，体现在 Entry 对象的创建上
ash = { version = "0.38.0", features = ["debug"] }
# vk-mem-0.4.0 和 ash-0.38.0+1.3.281 匹配
vk-mem = "0.4.0"
glam = { version = "0.22.0", features = ["bytemuck", "rand", "serde"] }
winit = "0.30.8"
# create vk surface using window handle
ash-window = "0.13.0"
# 让 winit 可以和图形库通信
raw-window-handle = "0.6.2"
imgui = { version = "0.12.0", features = ["docking"] }

###########################################################
# 资源加载与序列化 (Asset Loading & Serialization)
###########################################################
image = "0.25.6"
gltf = "1.0.0"
tobj = "4.0.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

###########################################################
# 日志、调试与性能分析 (Logging, Debugging & Profiling)
###########################################################
log = "0.4.0"
env_logger = "0.11.8"
colored = "2"
anstyle = "1.0.10"
tracy-client = "0.18.4"

###########################################################
# 并发与数据结构 (Concurrency & Data Structures)
###########################################################
rayon = "1.10.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8"
# 高性能哈希表，支持代际索引
slotmap = "1.0.7"
indexmap = "2.12.1"
uuid = { version = "1.16.0", features = ["v4"] }

###########################################################
# 开发工具 (Development Tools)
###########################################################
# 错误处理
anyhow = "1.0.84"
# 宏开发
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# C/C++ 绑定生成
bindgen = "0.72.1"

###########################################################
# 通用工具 (General Utilities)
###########################################################
bytemuck = { version = "1.16.0", features = ["derive"] }
itertools = "0.10.5"
array-init = "2.1.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
walkdir = "2.5.0"
bitflags = "2.3.2"
scopeguard = "1.2.0"
chrono = "0.4.38"
rand = "0.8.5"
rand_derive = "0.5.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
toml = "0.8"
