[package]
name = "truvis-winit-app"
version = "0.1.0"
edition = "2024"
description = "app"

[[bin]]
name = "rt-cornell"
path = "src/bin/rt_cornell.rs"
[[bin]]
name = "shader-toy"
path = "src/bin/shader_toy_app.rs"
[[bin]]
name = "rt-sponza"
path = "src/bin/sponza_app.rs"
[[bin]]
name = "triangle"
path = "src/bin/triangle_app.rs"


[dependencies]
truvis-app-api = { workspace = true }
truvis-frame-runtime = { workspace = true }
truvis-app = { workspace = true }
truvis-path = {workspace = true}

log = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
raw-window-handle = { workspace = true }
crossbeam-channel = { workspace = true }
tracy-client = { workspace = true }
