[package]
name = "app-kit"
version = "0.1.0"
edition = "2024"
description = "Shared app-layer components for Truvis applications and samples"

[dependencies]
truvis-app-frame = { workspace = true }
truvis-gfx = { workspace = true }
truvis-render-foundation = { workspace = true }
truvis-render-graph = { workspace = true }
app-render-passes = { workspace = true }
truvis-render-runtime = { workspace = true }
truvis-path = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-utils = { workspace = true }

ash = { workspace = true }
glam = { workspace = true }
imgui = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
slotmap = { workspace = true }
vk-mem = { workspace = true }
