[package]
name = "truvis-fetch-res"
version = "0.1.0"
edition = "2024"
description = "在各个 crates 之间共享的工具"


[dependencies]
truvis-path = { workspace = true }
truvis-logs = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anstyle = { workspace = true }
chrono = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
zip = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
