[package]
name = "truvis-app-kit"
version = "0.1.0"
edition = "2024"
description = "Shared app-layer components for Truvis applications and samples"

[dependencies]
truvis-app-frame = { workspace = true }
truvis-gfx = { workspace = true }
truvis-render-foundation = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-render-passes = { workspace = true }
truvis-render-runtime = { workspace = true }
truvis-gui-backend = { workspace = true }
truvis-path = { workspace = true }

ash = { workspace = true }
glam = { workspace = true }
imgui = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
