[package]
name = "truvis-app"
version = "0.1.0"
edition = "2024"
description = "Main Truvis Sponza application"

[[bin]]
name = "rt-sponza"
path = "src/main.rs"

[dependencies]
truvis-app-frame = { workspace = true }
truvis-app-kit = { workspace = true }
truvis-winit-app = { workspace = true }
truvis-render-runtime = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-asset = { workspace = true }
truvis-world = { workspace = true }
truvis-path = { workspace = true }
truvis-shader-binding = { workspace = true }

ash = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
