[package]
name = "truvis-winit-app"
version = "0.1.0"
edition = "2024"
description = "winit platform entry for Truvis apps"

[dependencies]
truvis-app-frame = { workspace = true }
truvis-logs = { workspace = true }
truvis-path = { workspace = true }

log = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
raw-window-handle = { workspace = true }
