[package]
name = "truvis-app"
version = "0.1.0"
edition = "2024"
description = "app"


[dependencies]
truvis-app-api = { workspace = true }
truvis-frame-runtime = { workspace = true }
truvis-render-passes = { workspace = true }
truvis-gfx = { workspace = true }
truvis-renderer = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-path = { workspace = true }
truvis-logs = { workspace = true }
truvis-render-interface = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-asset = { workspace = true }
truvis-scene = { workspace = true }
truvis-utils = { workspace = true }
truvis-descriptor-layout-macro = { workspace = true }
truvis-descriptor-layout-trait = { workspace = true }
truvis-gui-backend = { workspace = true }

log = { workspace = true }
ash = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
ash-window = { workspace = true }
imgui = { workspace = true }
raw-window-handle = { workspace = true }
tracy-client = { workspace = true }

