[package]
name = "truvis-frame-api"
version = "0.1.0"
edition = "2024"
description = "Frame app and plugin contracts for the BaseApp runtime"

[dependencies]
truvis-gfx = { workspace = true }
truvis-renderer = { workspace = true }
truvis-render-interface = { workspace = true }
truvis-world = { workspace = true }

raw-window-handle = { workspace = true }
