[package]
name = "truvis-render-graph"
version = "0.1.0"
edition = "2024"
description = ""

[dependencies]
truvis-render-interface = { workspace = true }
truvis-gfx = { workspace = true }
truvis-path = {workspace = true}
truvis-shader-binding = { workspace = true }
truvis-descriptor-layout-trait = { workspace = true }
truvis-descriptor-layout-macro = { workspace = true }
truvis-utils = { workspace = true }


ash = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
vk-mem = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
slotmap = { workspace = true }
tracy-client = { workspace = true }
petgraph = { workspace = true }
