[package]
name = "truvis-render-interface"
version = "0.1.0"
edition = "2024"
description = "GPU 的边界"

[dependencies]
truvis-gfx = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-descriptor-layout-trait = { workspace = true }
truvis-descriptor-layout-macro = { workspace = true }
truvis-path = { workspace = true }


ash = { workspace = true }
vk-mem = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
slotmap = { workspace = true }
tracy-client = { workspace = true }
bytemuck = { workspace = true }
