[package]
name = "truvis-render-passes"
version = "0.1.0"
edition = "2024"
description = "Shared render pass implementations (RT, post-process, etc.)"

[dependencies]
truvis-gfx = { workspace = true }
truvis-render-interface = { workspace = true }
truvis-world = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-path = { workspace = true }
truvis-utils = { workspace = true }
truvis-descriptor-layout-macro = { workspace = true }
truvis-descriptor-layout-trait = { workspace = true }

ash = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
bytemuck = { workspace = true }
