[package]
name = "truvis-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
truvis-gfx = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-asset = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-render-interface = { workspace = true }
truvis-scene = { workspace = true }
truvis-world = { workspace = true }
truvis-cxx-binding = { workspace = true }
truvis-gui-backend = { workspace = true }


ash = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
tracy-client = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
imgui = { workspace = true }
raw-window-handle = { workspace = true }

