[package]
name = "truvis-scene"
version = "0.1.0"
edition = "2024"
description = ""

[dependencies]
truvis-render-interface = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-asset = { workspace = true }


ash = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
slotmap = { workspace = true }
indexmap = { workspace = true }
