[package]
name = "truvis-frame-api"
version = "0.1.0"
edition = "2024"
description = "Render app and plugin contracts for the frame runtime"

[dependencies]
truvis-gfx = { workspace = true }
truvis-render-backend = { workspace = true }
truvis-render-interface = { workspace = true }
truvis-world = { workspace = true }

raw-window-handle = { workspace = true }
