[package]
name = "truvis-frame-runtime"
version = "0.1.0"
edition = "2024"
description = "Render app shell for RenderRuntime lifecycle orchestration"

[dependencies]
truvis-frame-api = { workspace = true }
truvis-gfx = { workspace = true }
truvis-render-runtime = { workspace = true }
truvis-logs = { workspace = true }

ash-window = { workspace = true }
raw-window-handle = { workspace = true }
tracy-client = { workspace = true }
log = { workspace = true }
