[package]
name = "truvis-gfx"
version = "0.1.0"
edition = "2024"
description = "Truvis 的 GFX 层，提供 Vulkan 的封装和抽象"

[dependencies]
truvis-descriptor-layout-trait = { workspace = true }


ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
vk-mem = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
serde_json = { workspace = true }
tracy-client = { workspace = true }
