[package]
name = "truvis-render-graph"
version = "0.1.0"
edition = "2024"
description = ""

[dependencies]
truvis-render-foundation = { workspace = true }
truvis-gfx = { workspace = true }


ash = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
slotmap = { workspace = true }
tracy-client = { workspace = true }
