[package]
name = "truvis-render-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
truvis-gfx = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-asset = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-render-foundation = { workspace = true }
truvis-world = { workspace = true }
truvis-path = { workspace = true }


ash = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
tracy-client = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
slotmap = { workspace = true }
vk-mem = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
